Updated EditorEntityList to fix overflow scroll and styling in some places

--- a/code/ui/editor/EditorEntityList.scss
+++ b/code/ui/editor/EditorEntityList.scss
@@ -24,14 +24,21 @@
             color: white;
         }
 
-        .container {
-            display: flex;
-            flex-direction: column;
+        .close {
             width: 90%;
-            height: 70%;
+        }
+
+        .container {
+            flex-direction: column;
+            margin-top: 24px;
+            flex-grow: 1;
             overflow: scroll;
+            display: flex;
+            width: 90%;
 
             .category {
+                flex-grow: 0;
+                flex-shrink: 0;
                 margin-top: 24px;
                 border-radius: 8px;
                 background-color: rgba( 0 0 0.2 0.8 );
@@ -48,8 +55,14 @@
                 }
 
                 .editor-button {
+                    flex-grow: 1;
                     margin-top: 8px;
+                    height: 48px;
                 }
+            }
+
+            :first-child {
+                margin-top: 0px;
             }
         }
     }
